globals/globals.css
:root{
  --mainColor: green;
}

body{
  margin: 0;
  padding: 0;
  width: 100vw;
  min-height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  align-content: flex-start;
  flex-wrap: wrap;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

main{
  position: relative;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  align-content: flex-start;
  flex-wrap: wrap;
}

section{
  position: relative;
  width: 100%;
  max-width: 1200px;
  padding: 1rem;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  align-content: flex-start;
  flex-wrap: wrap;
}

@media screen and (max-aspect-ratio: 13/9){
  .desktop{
    display: none;
  }
}

@media screen and (min-aspect-ratio: 13/9){
  .mobile{
    display: none;
  }
}

